HelpMePlay | 1.0.3
	New:
		Added an options panel. This panel is accessible by entering the addon's slash command (/hmp).
		Automated the adventure map for Shadowlands.
		Added the rest of the zones for the Battle for Azeroth maps for both factions.
	Changes:
		The modifier keys will now pause all decisions where the player makes a choice.
		The player must have at least 300 gold more than the cost of mount training or twice the cost of mount training for it to be automatically learned.
	Fixes:
		Fixed an issue with the player's covenant choice forcing Kyrian. This was the result of an issue with the PlayerChoice module.
		Fixed an issue with Nemea's confirmation in Bastion.