@@ -30,9 +30,26 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Available Commands"]														= "|cffFFFFFFAvailable Commands|r"
 	L["Discord"]																= "Lightsky#0658"
 	L["Red WARNING"]															= "|cffFF0000WARNING:|r "
-	-- Options Panel Texts
+	-- Options Panel Names
 	L["Adventure Maps"]															= "Adventure Maps"
+	L["Dialog"]																	= "Dialog"
+	L["Emotes"]																	= "Emotes"
+	L["Garrison Tables"]														= "Garrison Tables"
+	L["Mail"]																	= "Mail"
+	L["Merchants"]																= "Merchants"
+	L["Mount Training"]															= "Mount Training"
+	L["Speech"]																	= "Speech"
+	L["War Mode"]																= "War Mode"
+	-- Options Panel Descriptions
 	L["Adventure Maps Check Button"]											= "Automates the selection of zones and footholds for the Battle for Azeroth and Shadowlands adventure maps.\n\n|cffFFFFFFAlliance|r:\n|TInterface\\Buttons\\UI-SpellbookIcon-NextPage-Up:12|t |cffFFFFFFZones|r: Tiragarde Sound, Stormsong Valley, Drustvar\n|TInterface\\Buttons\\UI-SpellbookIcon-NextPage-Up:12|t |cffFFFFFFFootholds|r: Zuldazar, Nazmir, Vol'dun\n|cffFFFFFFHorde|r:\n|TInterface\\Buttons\\UI-SpellbookIcon-NextPage-Up:12|t |cffFFFFFFZones|r: Zuldazar, Nazmir, Vol'dun\n|TInterface\\Buttons\\UI-SpellbookIcon-NextPage-Up:12|t |cffFFFFFFFootholds|r: Stormsong Valley, Tiragarde Sound, Drustvar\n\n|cffFFFFFFShadowlands|r: Bastion, Maldraxxus, Ardenweald, Revendreth"
+	L["Dialog Check Button"]													= "Automates the selection of dialog options when speaking with NPCs. This does NOT apply to all dialogs."
+	L["Emotes Check Button"]													= "Automates emoting at specific NPCs.\n|cffFFFFFFExample|r: The runestones during the \"Repeat After Me\" quest in Maldraxxus."
+	L["Garrison Tables Check Button"]											= "Automates the start of the first Garrison mission for both factions, as well as the plotting of the Barracks building for Level 1 Garrisons."
+	L["Mail Check Button"]														= "Automates the collection of ONLY gold from your mailbox."
+	L["Merchants Check Button"]													= "Automates the purchase of specific items from specific merchants.\n|cffFFFFFFExample|r: The [Bottle of Airspark] from Lanna Skyspark in Highmountain."
+	L["Mount Training Check Button"]											= "Automates the purchase of mount training from trainers.\nThe player must have either double the cost of the training OR at least 300 more gold than the cost of the training."
+	L["Speech Check Button"]													= "Automates interacting with specific NPC speech.\n|cffFFFFFFExample|r: The Playful Trickster during \"The Games We Play\" quest in Ardenweald."
+	L["War Mode Check Button"]													= "Automates opting the player into War Mode when entering Orgrimmar or Stormwind City.\nThis only applies to players above level 20, but below 50."
 	-- Skill Lines																
 	L["Riding"]																	= "Riding"
 	-- Speech																	
