@@ -11,6 +11,7 @@ e:SetScript("OnEvent", function(self, event, ...)
 	end
 	
 	if event == "MAIL_INBOX_UPDATE" then
+		if HelpMePlayOptionsDB.Mail == false then return end
 		local numMailItems = GetInboxNumItems()
 		for index = numMailItems, 1, -1 do
 			TakeInboxMoney(index)
